<resources>
    <string name="app_name">Projektas3Pilnas</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="arrow">←</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="plusminus">+/-</string>
    <string name="root">√</string>
    <string name="division">/</string>
    <string name="procent">%</string>
    <string name="multiplication">*</string>
    <string name="onex">1/x</string>
    <string name="minus">-</string>
    <string name="addition">+</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="nr7">7</string>
    <string name="nr8">8</string>
    <string name="nr9">9</string>
    <string name="nr4">4</string>
    <string name="nr5">5</string>
    <string name="nr6">6</string>
    <string name="nr1">1</string>
    <string name="nr2">2</string>
    <string name="nr3">3</string>
    <string name="nr0">0</string>
</resources>