<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shrinkColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="169dp"
            android:layout_weight="3">

            <TextView
                android:id="@+id/ShowOperations"
                android:singleLine="true"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:textColor="#000000"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/MC"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/buttonborder"
                android:text="@string/mc" />

            <Button
                android:id="@+id/MR"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/buttonborder"
                android:text="@string/mr" />

            <Button
                android:id="@+id/MS"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/buttonborder"
                android:text="@string/ms" />

            <Button
                android:id="@+id/Mplus"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/buttonborder"
                android:text="@string/mplus" />

            <Button
                android:id="@+id/Mminus"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/buttonborder"
                android:text="@string/mminus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/Delete"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/arrow" />
            <Button
                android:id="@+id/CE"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/ce" />
            <Button
                android:id="@+id/C"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/c" />
            <Button
                android:id="@+id/ValueChange"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/plusminus" />
            <Button
                android:id="@+id/SquareRoot"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/root" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/Seven"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/nr7" />
            <Button
                android:id="@+id/Eight"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/nr8" />
            <Button
                android:id="@+id/Nine"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/nr9" />
            <Button
                android:id="@+id/Division"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/division" />
            <Button
                android:id="@+id/Procent"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/procent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/Four"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/nr4" />
            <Button
                android:id="@+id/Five"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/nr5" />
            <Button
                android:id="@+id/Six"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/nr6" />
            <Button
                android:id="@+id/Multiplication"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/multiplication" />
            <Button
                android:id="@+id/Squared"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/onex" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/One"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/nr1" />
            <Button
                android:id="@+id/Two"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/nr2" />
            <Button
                android:id="@+id/Three"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/nr3" />
            <Button
                android:id="@+id/Subtraction"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/minus" />
            <Button
                android:id="@+id/Addition"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
                android:text="@string/addition" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/Zero"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/nr0"
                android:layout_span="2"/>
            <Button
                android:id="@+id/Dot"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/numberbuttonborder"
                android:text="@string/dot" />
            <Button
            android:id="@+id/Equals"
            android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/otherbuttonborder"
            android:text="@string/equals"
            android:layout_span="2"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>